# RAMMY

./: .gitignore  LICENSE  RAMMY.rc  RAMMY.slnx  RAMMY.vcxproj  RAMMY.vcxproj.filters  README.md  RELEASE_NOTES.md  Resource.h  index.html  main.cpp  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  useRammyLogic.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/themes/: FlanishyTheme.tsx  GlassTheme.tsx
