[package]
name = "app"
version = "0.1.0"
description = "Lightweight Windows memory optimizer built with Tauri and React."
authors = ["sykrondev"]
license = "MIT"
repository = "https://github.com/sykrondev/RAMMY"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
windows = { version = "0.58.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_Security", "Win32_UI_Shell", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader", "Win32_System_Performance"] }
winreg = "0.56.0"
tauri-plugin-notification = "2"
